# kakpipe

./: .gitlab-ci.yml  .hooks.yml  CHANGELOG.md  Cargo.toml  README.md
rc/: kakpipe.kak
src/: args.rs  command.rs  escape.rs  face.rs  lib.rs  main.rs  mktemp.rs  range_specs.rs
src/cmd/: faces.rs  fifo.rs  mod.rs  range_specs.rs
